Changed pom to avoid pergems in CD